k8s/blog/httproute.yaml
# Public route for the blog. Attaches to the shared Gateway's blog listener
# (TLS terminated there with the cert-manager-issued blog-tls cert). No
# SecurityPolicy: unlike Grafana, this is meant to be read by anyone.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https-blog
  hostnames:
    - blog.chapellu.fr
  rules:
    - backendRefs:
        - name: blog
          port: 80
